[tool.poetry]
name = "blocklist-compiler"
version = "0.1.0"
description = "A script to compile various blocklist formats into a V2Ray dlc.dat file."
authors = ["An0nX"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
requests = "^2.32.5"
protobuf = "^6.33.1"

[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.76.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
